# MyConfig

./: .gitignore
IAM/authelia/: README.md  install.md
IAM/kanidm/: README.md
IAM/ory-kratos/: README.md  config.yml  kratos.yml  schema_users_v1.json
IAM/ory-kratos/sites-available/: ory-kratos.conf
acme.sh/: setup.sh
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
c/: .gitignore  CMakeLists.txt  main.c
cache/: redis.md
clash/: disable_multihomed_ns.md
container/etc/container/: registry.conf
cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  HowToUseGprof.md  HowToUsePerf.md  Makefile  Misc.h  Preload.cmake  README.md  build_afl++_from_source.sh  build_boost_from_source.sh  clang-format-style.txt  main.cpp  pre-commit.sh
cpp/.cmake_config/: !main.cmake  Z__________compiler-static-analysis.cmake  add-sanitizer-options.cmake  asan.cmake  ccache.cmake  cfisan.cmake  clang-format.cmake  clang-tidy.cmake  compiler-info.cmake  compiler-static-analysis.cmake  cppcheck.cmake  default-vars.cmake  enable-ipo-on-release.cmake  format-files.cmake  init.cmake  latest-std.cmake  lsan-standalone.cmake  msan.cmake  ninja.cmake  report.cmake  sanitizer-options.cpp  static-analyzer.cmake  symlink-compile-commands.cmake  try-add-flag.cmake  tsan.cmake  use-unsafe-math-in-release.cmake  use-unsafe-math-on-release.cmake
cpp/.cmake_config/flags/: common.cmake  debug.cmake  disable-exception-on-release.cmake  enable-ipo-on-release.cmake  fast-math-on-release.cmake  instrument.cmake  release.cmake  strip-symbols-on-release.cmake  warnings.cmake
cpp/.cmake_config/sanitizers/: add-sanitizer-options.cmake  asan.cmake  msan.cmake  sanitizer-options.cpp  tsan.cmake  ubsan.cmake
cpp/cmake-args/: !main.cmake  add-sanitizer-options.cmake  asan.cmake  cfisan.cmake  check-targets.cmake  latest-std.cmake  lsan-standalone.cmake  msan.cmake  sanitizer-options.cpp  static-analyzer.cmake  tsan.cmake  ubsan.cmake
cpp/include/utils/: attributes.h  backtrace.h  constants.h  intrinsics.h  macros.h  math.h  misc.h  pmr_example.h  pragmas-example.h  types.h
cpp/include/utils/compats/: cstddef_compat.h  memory.h  optional_compat.h  span.h  type_traits.h  type_traits_compat.h
cpp/include/utils/helpers/: aligned_allocator.h  aligned_to_size_allocator.h  cow_string.h  cow_vector.h  cpp_type_name.h  dbg_print.hpp  debug_bytes.h  pmr_example.h
cpp/include/utils/impls/: byte.h  no_init.h  span.h  span_compat.h  stddef_compat.h  type_traits_compat.h
cpp/src/: Misc.h  cowbasic_string.hpp  main.cpp
env/: .gdbinit  .jerryc05.aliases.sh  .jerryc05.env.sh  .jerryc05.zinit.sh  README.md  setup_pam.md  src-dl.py
env/$HOME/: .condarc  .gdbinit  .jerryc05.aliases.sh  .jerryc05.env.sh  .jerryc05.zinit.sh  .mambarc  .tmux.conf  README.md
env/$HOME/.config/htop/: htoprc
env/$HOME/.gnupg/: gpg-agent.conf  gpg.conf
env/$HOME/.ssh/: config
env/$HOME/jerryc05-bin/: gitrsync.py  xrsync.py
env/etc/apt/: source.list  sudoers
env/etc/ssh/: sshd_config
env/etc/systemd/: journald.conf
games/apex-legends/: autoexec.cfg
games/apex-legends/Saved Games/: videoconfig.txt
games/apex-legends/cfg/: autoexec.cfg
games/dead-by-daylight/: unlock-fps.py
idm/kanidm/: README.md
iot/arduino-api/: progmem_helper.h
iot/arduino-framework/: progmem_helper.h
iot/esphome/: dht_sensor.yaml  dht_wifi_pir.yaml
iot/home-assistant/: setup.md  setup.sh
java/: maven.md
mail-server/: postfix-dovecot.sh
neovim/: astronvim.md
nginx/: authelia-auth.conf  authelia-authrequest.conf  authelia-location.conf  authelia-proxy.conf  authelia-server.conf  cloudflare.conf  ng-ban.conf  ng-host.conf  ng-limit.conf  ng-redirect.conf  nginx.conf  rate-limit-public-ip.conf  security-no-ua.conf  security.conf  setup.sh  ssl.conf
nginx/not-used/: ng-301-h3.conf
nvidia/: nv_helper.py
os/: git.sh
os-setups/: acme.sh.md  acme.sh.sh  arch_in_wsl.md  brew.sh  build-openmpi-from-source.md  build_flags.sh  build_openmpi_from_source.md  dns.md  git.sh
os-setups/archlinux/: arch_in_wsl.md  downgrade-a-package.md
os-setups/aria2/$HOME/.aria2/: aria2.conf
os-setups/network/: util.sh
os-setups/shallow-git/: git
os-setups/ssh/: keygen.md
os-setups/ssh/$HOME/.ssh/: config
os-setups/windows/security/: show-non-ms-ctl-ca.sh
os-setups/windows/tweaks/: free-up-resources.ps1
os/acme.sh/: setup.sh
os/archlinux/: arch_in_wsl.md
os/git/: setup.sh
os/jemalloc/: setup.sh
os/network/: bbr.sh  main-sysctl.sh  util.sh
os/network/bbr/: setup.sh
os/network/other-sysctl/: setup.sh
os/network/tcp_notsent_lowat/: setup.sh
os/ssh/: keygen.md
os/ssh/$HOME/.ssh/: config
os/wrk/: setup.sh
python/: .gitignore  MyLogFmt.py  pyproject.toml
python/quart/: run.py  util_after_request.py  util_before_request.py  util_etag.py  util_logging.py
python/test/: test_base.py  test_runner.py
rust/: Cargo.toml  br  c  my-release-build.sh
rust/.cargo/: config  config.toml
rust/.github/workflows/: rust.yml
rust/parallel-test/: Cargo.toml
rust/parallel-test/src/: main.rs  test.rs
rust/src/: main.rs  main_.rs
rust/src/utils/: mod.rs  my_err.rs  ncurses.rs
sql/: mysql.md
sql/pgsql/: README.md
sql/sqlite/: schema.sql
ts/: .gitignore  package.json  webauthn.ts
utils/: HowToInstallArchInWsl.md  git-upd.py  txz.py
vite-ts/: .babelrc  .browserslistrc  .eslintrc.js  .prettierrc.cjs  .prettierrc.js  biome.json  package.json  postcss.config.js  solid-js.py  solidjs.py  solidjs.sh  tsconfig.json  vite.config.ts
vite-ts/.github/workflows/: eslint.yml
vite-ts/src/: App.vue  main.ts  stores.ts
vite-ts/src/utils/: dark-mode.ts
vue3-vite/: .eslintrc.js  .eslintrc.react.js  .eslintrc.vue.js  .gitignore  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts  windi.config.ts
vue3-vite/.github/workflows/: eslint.yml
vue3-vite/src/: App.vue  main.ts  stores.ts
vue3-vite/src/stores/: x.ts
vue3-vite/src/utils/: ScrSize.vue  dark_mode.ts
webdev/: offline-first-pwa.md  react.md
(+12 files in other folders)
