cargo-features = ["profile-rustflags"]

[package]
name = "my-template"
version = "0.1.0"
authors = ["Ziyan \"Jerry\" Chen <jerryc443@gmail.com>"]
edition = "2018"
description = "A short description of my package"
#documentation = "https://docs.rs/???"
readme = "README.md"
#homepage = "https://???.rs/"
repository = "https://github.com/jerryc05/MyTemplate/"
license = "GPL-3.0-or-later"
keywords = ["template"]
categories = [
    "command-line-utilities"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
rustflags = [
    "-Cinline-threshold=1000",
    "-Clinker-plugin-lto",
    "-Ctarget-cpu=native",
    "-Zmutable-noalias",

    "-Zbuild-std=std,panic_abort",
    "-Zbuild-std-features=panic_immediate_abort"
]
strip = 'symbols'

[profile.dev]
rustflags = [
    "-Ccontrol-flow-guard=on",
    #"-Zsanitizer=address",
    #"-Zsanitizer=leak",
    #"-Zsanitizer-memory-track-origins=1",
    #"-Zsaturating-float-casts=1"
]

#  rustup toolchain install nightly
#  rustup component add rust-src --toolchain nightly

#  cargo install cargo-bloat --no-default-features
#  cargo bloat --release
