cargo-features = ['profile-rustflags']

[package]
name = 'parallel-test'
version = '0.1.0'
authors = ['Ziyan "Jerry" Chen <jerryc443@gmail.com>']
edition = '2021'
description = 'A test framework that runs as parallel as possible'
#documentation = 'https://docs.rs/???'
#readme = 'README.md'
#homepage = 'https://???.rs/'
repository = 'https://github.com/jerryc05/'
license = 'BSD-4-Clause'
#keywords = []
#categories = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ncurses = '5.101.0'


[features]
ref-count-init = []


[profile.release]


[profile.dev]
